# my-graphics-library

./: CMakeLists.txt  main.cpp
API/: VSTUB.CPP  VSTUB.H
engine/: color.h
engine/arc/: arc.cpp  arc.h
engine/base_point/: base_point.cpp  base_point.h
engine/line/: line.cpp  line.h
engine/line_wrapper/: line_wrapper.cpp  line_wrapper.h
engine/oArc/: oArc.cpp  oArc.h
engine/oLine/: oLine.cpp  oLine.h
engine/oSector/: oSector.cpp  oSector.h
engine/oSegment/: oSegment.cpp  oSegment.h
engine/object/: object.cpp  object.h
game/circle/: circle.cpp  circle.h
game/food/: food.h
game/rectangle/: rectangle.cpp  rectangle.h
game/snake/: snake.cpp  snake.h
